--- a/src/pages/Ministries/Children/Children.css
+++ b/src/pages/Ministries/Children/Children.css
@@ -81,13 +81,14 @@
     flex: 1;
 }
 .row1 .textQuote{
-    font-Size:40px;
+    font-Size:30px;
     margin-block-end:10px;
 }
 .row3{
     display: grid;
+    height: calc(100dvh - 100px);
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 200px 200px;
+    grid-template-rows: repeat(2, calc((100dvh - 110px) / 2));
     gap: .5rem;
     margin: 4rem 1rem;
 }
@@ -95,7 +96,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top center;
+    object-position: center center;
     border-radius: 10px;
 }
 .row3 div:nth-of-type(1){
@@ -120,7 +121,7 @@
 
 @media screen and (max-width: 980px){
     .row1 .textQuote{
-        font-size: 30px;
+        font-size: 24px;
     }
 }
 @media  screen and (max-width: 768px){
